--- a/src/components/TicketCard/TicketCard.css
+++ b/src/components/TicketCard/TicketCard.css
@@ -111,6 +111,11 @@
     border-bottom: 1px solid;
 }
 
+.stops-line div {
+    border: 1px solid rgb(210, 213, 214);
+    width: 100%;
+}
+
 .stops-line:after {
     content: '✈';
     display: inline;
